20150302 libspectrum.h.in,memory.c: add libspectrum_{m,re}alloc_n() and use this
         for libspectrum_{new,renew}() macros (Stuart).
20150302 libspectrum.h.in,memory.c: rename libspectrum_calloc() to
         libspectrum_malloc0_n() (Stuart).
20150315 README,configure.ac: remove automatic fallback to GLib replacement (now
         --with-fake-glib) (Stuart).
20150315 make-perl.c: add LIBSPECTRUM_HAS_GLIB_REPLACEMENT macro (Stuart).
20150316 configure.ac: always use -Wwrite-strings when using GCC (Stuart).
20150316 zlib.c,zxs.c: define ZLIB_CONST when including <zlib.h> and remove cast
         used as workaround for discarding of const (Stuart).
20150316 pzx_read.c: add missing const qualifiers and remove casts (Stuart).
20150316 generate.pl.in,libspectrum.h.in: remove autogeneration warning from
         libspectrum.h.in (Stuart).
20150316 doc/libspectrum.txt: add missing line break (Stuart).
20150316 snapshot.c: store PC-1 for all snapshot formats whilst in the halted
         state (Stuart).
20150318 crypto.c,csw.c,internals.h,libspectrum.c,pzx_read.c,rzx.c,szx.c,
         tzx_read.c: const and static cleanups (Stuart).
20150418 internals.h: fix compilation on systems without stdint.h (Stuart).
20150506 libspectrum.h.in: add missing compatibility comments (Stuart).
20150507 libspectrum.{c,h.in}: add Didaktik disk class and image format (part of
         patch #331) (Gergely Szasz).
20150510 Makefile.am,m4/pkg.m4: add pkg.m4 for PKG_CHECK_MODULES in case the
         platform doesn't have pkg-config installed (Sergio).
20150512 pzx_read.c,szx.c,tzx_write.c: avoid mixing declarations and code for
         C89 compilers (Adrien Destugues)
20150513 internals.h: fix ARRAY_SIZE when using a modern GCC with strict C89
         syntax (Sergio).
20150606 doc/libspectrum.txt: sync with snap_accessors.txt (Stuart).
20150613 m4/ax_create_stdint_h.m4: Add AX_CREATE_STDINT_H macro from the GNU
         Autoconf Archive (Stuart).